# OpenGLExercises

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.sh  clean.bat  clean.sh  imgui.ini
FinishedExercises/Bouncer/resources/shaders/: CoordSys.vs
FinishedExercises/CameraCoordsEx3/: imgui.ini  main.cpp
FinishedExercises/CameraMovement1/: main.cpp
FinishedExercises/CameraSpin/: imgui.ini  main.cpp
FinishedExercises/CameraSpin/resources/shaders/: CoordSys.vs
FinishedExercises/HardcodedCamera/: main.cpp
FinishedExercises/MultiCubeRotated/: imgui.ini  main.cpp
FinishedExercises/MultiCubeRotated/resources/shaders/: CoordSys.vs
FreeCam/: main.cpp
include/: application.hpp  helpers.hpp  menus.hpp  primitives.hpp  texture_loader.hpp
include/glad/: glad.h
resources/shaders/: fragment.fs  vertex.vs
src/: glad.c  helpers.cpp  main.cpp  menus.cpp  texture_loader.cpp
